main/default/objects/AMP_Detail__c/AMP_Detail__c.object-meta.xml
<CustomObject>
    <label>AMP Detail</label>
    <nameField>
        <label>AMP Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AMP Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>