main/default/objects/AMP_Detail__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AMP Details</relationshipLabel>
    <relationshipName>AMP_Details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>