main/default/objects/AMP_Detail__c/fields/Circuit_ID__c.field-meta.xml
<CustomField>
    <fullName>Circuit_ID__c</fullName>
    <label>Circuit ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>