main/default/objects/AMP_Detail__c/fields/ICC_ServiceProductID__c.field-meta.xml
<CustomField>
    <fullName>ICC_ServiceProductID__c</fullName>
    <label>ICC ServiceProductID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>