main/default/objects/AMP_Detail__c/fields/IRAC_Agent_Fee__c.field-meta.xml
<CustomField>
    <fullName>IRAC_Agent_Fee__c</fullName>
    <label>IRAC Agent Fee</label>
    <precision>18</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>