main/default/objects/AMP_Detail__c/fields/NetEx_Circuit_ID_s__c.field-meta.xml
<CustomField>
    <fullName>NetEx_Circuit_ID_s__c</fullName>
    <label>NetEx Circuit ID(s)</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>