main/default/objects/AMP_Detail__c/fields/Root_Subscriber_ID__c.field-meta.xml
<CustomField>
    <fullName>Root_Subscriber_ID__c</fullName>
    <label>Root Subscriber ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>