main/default/objects/AMP_Detail__c/fields/Subscriber_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_ID__c</fullName>
    <label>Subscriber ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>